--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -50,6 +50,9 @@ config VIDEOMODE_HELPERS
 config HDMI
 	bool
 
+config HDMI_NOTIFIERS
+	bool
+
 if VT
 	source "drivers/video/console/Kconfig"
 endif
