--- a/arch/arm/configs/rockchip_linux_defconfig
+++ b/arch/arm/configs/rockchip_linux_defconfig
@@ -271,6 +271,9 @@ CONFIG_REGULATOR_RK808=y
 CONFIG_REGULATOR_TPS6586X=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_CEC_SUPPORT=y
+CONFIG_MEDIA_CEC_DEBUG=y
+CONFIG_MEDIA_CEC_EDID=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
@@ -289,6 +292,7 @@ CONFIG_ROCKCHIP_LVDS=y
 CONFIG_DRM_UDL=y
 CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
+CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_MALI_MIDGARD_FOR_LINUX=y
 CONFIG_MALI_MIDGARD=y
 CONFIG_MALI_DEVFREQ=y
